[gd_scene load_steps=3 format=3 uid="uid://dml22u8x1dd6q"]

[ext_resource type="Script" uid="uid://mvpnecwelisr" path="res://Scripts/SettingsUpdatesPage.gd" id="1_q866n"]
[ext_resource type="PackedScene" uid="uid://cd33gvegau1vp" path="res://Scenes/CustomButton.tscn" id="2_s3ulb"]

[node name="SettingsUpdatesPage" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_q866n")

[node name="Void0" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 2.5)
layout_mode = 2

[node name="CurVersion" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Current Version: 0.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LatestVersion" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Latest Version: 0.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LatestVersionSize" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Latest Version Size: 0.0B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Void1" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="GetLatestVersionBtn" parent="." instance=ExtResource("2_s3ulb")]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = " Get Latest Version Info "

[node name="Void2" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="UpdateBtn" parent="." instance=ExtResource("2_s3ulb")]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = " Update To Latest Version "

[node name="Void3" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="SourceBtn" parent="." instance=ExtResource("2_s3ulb")]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = " Go To Github Repository "
